# femmx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  FILE_FORMATS.md  NOTICE.md  README.md  build.ps1  build_all.bat  build_cuda.bat  build_femmx.ps1  build_plain.bat  script.nsi
.claude-memory/: MEMORY.md  README.md  build_and_com_registration_gotchas.md  close_test_windows_permission.md  disk_hygiene.md  femmqt_qt_gui.md  femmx_rebrand.md  gpu_speedup_investigation.md  hsolv_thermal_cuda_port.md  push_branch_policy.md  pyfemm_is_pip_installed.md  qt_gui_scope_deferred.md  release_tagging_workflow.md  sync_memory_to_git.md  validate_numerical_ports_empirically.md
.github/workflows/: ccpp.yml
belasolv/: CMakeLists.txt  femmedoccore.cpp  femmedoccore.h  main.cpp  spars.cpp  spars.h  spars_cuda.cu  spars_cuda.h
csolv/: CMakeLists.txt  MAIN.CPP  SPARS.H  cspars.cpp  femmedoccore.cpp  femmedoccore.h  spars_cuda.cu  spars_cuda.h
demo_models/: README.md
demo_models/results/: copy_benchmark.txt
femm/: AnsxFileIO.cpp  AnsxFileIO.h  CDRAWDOC.CPP  CDRAWDOC.H  CDRAWLUA.CPP  CMakeLists.txt  CVIEWDOC.CPP  DarkMode.cpp  DarkMode.h  FemmeDoc.cpp  FemmeDoc.h  FemmeView.cpp  FemmeView.h  FemmviewDoc.cpp  FemmviewView.cpp  FemmviewView.h  FemxFileIO.cpp  FemxFileIO.h  HDRAWDOC.CPP  HDRAWDOC.H  HDRAWLUA.CPP  LoadMonitorDlg.cpp  LoadMonitorDlg.h  MOVECOPY.CPP  MainFrm.cpp  MainFrm.h  beladrawDoc.cpp  beladrawDoc.h  beladrawLua.cpp  beladrawView.cpp  beladrawView.h  belaviewDoc.cpp  belaviewView.cpp  belaviewView.h  cdrawView.cpp  cdrawView.h  cviewView.cpp  cviewView.h  femm.cpp  femm.h  (+11 more)
femmqt/: AnsFileIO.cpp  AnsFileIO.h  AnsxFileIO.cpp  AnsxFileIO.h  AppPreferences.cpp  AppPreferences.h  AppTheme.cpp  AppTheme.h  ArcPropDialog.cpp  ArcPropDialog.h  BHCurveDialog.cpp  BHCurveDialog.h  BlockLabelPropDialog.cpp  BlockLabelPropDialog.h  BoundaryPropDialog.cpp  BoundaryPropDialog.h  CMakeLists.txt  CircuitAnalysis.cpp  CircuitAnalysis.h  CircuitPropDialog.cpp  CircuitPropDialog.h  DensityPlotOptionsDialog.cpp  DensityPlotOptionsDialog.h  DxfIO.cpp  DxfIO.h  ExteriorRegionDialog.cpp  ExteriorRegionDialog.h  FemmFileIO.cpp  FemmFileIO.h  FemmProblem.h  FemmProblemEdit.cpp  FemmProblemEdit.h  FemxFileIO.cpp  FemxFileIO.h  GeometryScene.cpp  GeometryScene.h  GeometryView.cpp  GeometryView.h  GuiSwitch.cpp  GuiSwitch.h  (+42 more)
fkn/: CMakeLists.txt  LoadMonitorDlg.cpp  LoadMonitorDlg.h  cspars.cpp  femmedoccore.cpp  femmedoccore.h  fkn.cpp  fkn.rc  main.cpp  resource.h  spars.cpp  spars.h  spars_cuda.cu  spars_cuda.h
hsolv/: CMakeLists.txt  MAIN.CPP  SPARS.CPP  SPARS.H  hsolvdoc.cpp  hsolvdoc.h  spars_cuda.cu  spars_cuda.h
installer/: CMakeLists.txt
manual/: build_manual.bat  cflowlua.tex  eleclua.tex  generate_tex.ps1  heatlua.tex  magnlua.tex  manual.tex.in  mathematica.tex
mathfemm/: mathfemm.m  usage.nb
octavefemm/mfiles/: ci_setgpuaccel.m  ci_setredraw.m  ei_setgpuaccel.m  ei_setredraw.m  get_solve_stats.m  hi_setgpuaccel.m  hi_setredraw.m  mi_setgpuaccel.m  mi_setredraw.m  openfemm.m
scifemm/: CMakeLists.txt  scifemm.sci
scripts/: register_femm_com.ps1  unregister_femm_com.ps1
test/: README.md  ac_gpu_solver_test.py  conftest.py  copy_redraw_benchmark_test.py  currentflow_gpu_solver_test.py  electrostatic_gpu_solver_test.py  enforce_pslg_correctness_test.py  gpu_solver_test.py  lua_command_regression_test.py  requirements.txt  straight_wire_field_test.py  thermal_gpu_solver_test.py
test/results/ac_gpu_solver_test/: ac_gpu_solver.txt
test/results/copy_redraw_benchmark/: copy_benchmark.txt
test/results/currentflow_gpu_solver_test/: currentflow_gpu_solver.txt
test/results/electrostatic_gpu_solver_test/: electrostatic_gpu_solver.txt
test/results/gpu_solver_test/: gpu_solver.txt
test/results/lua_command_regression/: lua_command_regression.txt
test/results/thermal_gpu_solver_test/: thermal_gpu_solver.txt
test_models/: README.md  copy_redraw_benchmark.py  enforce_pslg_correctness_test.py  lua_command_regression_test.py  straight_wire_field.py
test_models/results/: copy_benchmark.txt
test_models/results/copy_redraw_benchmark/: copy_benchmark.txt
test_models/results/enforce_pslg_correctness_test/: enforce_pslg_correctness.txt
test_models/results/lua_command_regression/: lua_command_regression.txt
unittests/: README.md  conftest.py  copy_redraw_benchmark_test.py  enforce_pslg_correctness_test.py  lua_command_regression_test.py  straight_wire_field_test.py
unittests/results/copy_redraw_benchmark/: copy_benchmark.txt
unittests/results/enforce_pslg_correctness_test/: enforce_pslg_correctness.txt
unittests/results/gpu_solver_test/: gpu_solver.txt
unittests/results/lua_command_regression/: lua_command_regression.txt
